[tool.poetry]
name = "sap"
version = "0.1.0"
description = ""
authors = ["Vlad_Maximenko <106604188+Vlad2000102@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pyautocad = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
